@@ -59,3 +59,7 @@
 "bench-dlply.r","6i-a",2010-07-20 15:17:51,"6562dda",0.247,0.029,0.276
 "bench-dlply.r","6i-b",2010-07-20 15:17:52,"6562dda",0.638,0.031,0.67
 "bench-dlply.r","6i-c",2010-07-20 15:17:56,"6562dda",4.132,0.062,4.196
+"bench-llply.r","1e5",2010-07-28 15:47:47,"af4910b",0.077,0.001,0.08
+"bench-llply.r","1e6",2010-07-28 15:47:48,"af4910b",1.424,0.029,1.454
+"bench-llply.r","1e5",2010-07-28 15:48:11,"af4910b",0.076,0.008,0.085
+"bench-llply.r","1e6",2010-07-28 15:48:12,"af4910b",1.227,0.01,1.238
